<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fitness_background"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".ui.activity.LoginActivity">

    <!-- Logo Image -->
    <ImageView
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="150dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/gym_logo" />

    <!-- Login Title -->
    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="@string/description"
        android:textColor="@color/white"
        android:textSize="12.5sp"
        android:textStyle="bold" />

    <!-- Email EditText -->
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/rounded_transparent_edittext"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#B0B0B0"
        android:textSize="16sp" />

    <!-- Password EditText -->
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_transparent_edittext"
        android:drawableEnd="@drawable/ic_eye_open"
        android:drawablePadding="8dp"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:padding="16dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#B0B0B0"
        android:textSize="16sp" />

    <!-- Forgot Password Link -->
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="1dp">

        <TextView
            android:id="@+id/forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/password"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="8dp"
            android:text="@string/forgot_password"
            android:textColor="#FFFFFF"
            android:textSize="11sp"
            tools:ignore="NotSibling" />
    </RelativeLayout>

    <!-- Login Button -->
    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:background="@drawable/button_background"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/login_button"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <!-- Sign-Up Link -->
    <TextView
        android:id="@+id/signUpLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:gravity="center"
        android:text="@string/no_account"
        android:textColor="@color/white"
        android:textSize="14sp" />


</LinearLayout>
