<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.satria.gymer.ui.fragment.home.HomeFragment"
        android:label="@string/home_title"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.satria.gymer.ui.fragment.search.SearchFragment"
        android:label="@string/search_title"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_plan"
        android:name="com.satria.gymer.ui.fragment.plan.PlanFragment"
        android:label="@string/plan_title"
        tools:layout="@layout/fragment_plan" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.satria.gymer.ui.fragment.profile.ProfileFragment"
        android:label="@string/plan_title"
        tools:layout="@layout/fragment_profile" />

</navigation>
