<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_light_background"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <!-- Image View for the Result -->
        <ImageView
            android:id="@+id/resultImage"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:scaleType="centerCrop"
            android:layout_marginBottom="16dp"
            android:background="@drawable/image_placeholder"
            android:contentDescription="@string/result_image_description" />

        <!-- Text View for the Label -->
        <TextView
            android:id="@+id/resultText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/result_lable_placeholder" />

        <!-- Button to Return or Retry -->
        <Button
            android:id="@+id/btn_select_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pilih_gambar_dari_galeri"
            android:layout_marginBottom="16dp"
            android:textColor="#000000"/>

        <Button
            android:id="@+id/btnRetry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:paddingHorizontal="32dp"
            android:paddingVertical="12dp"
            android:backgroundTint="@color/black"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/retry_button_text" />
    </LinearLayout>
</ScrollView>
